# ENPHCode

ENPH211/: ENPH211_PHYS212_2024W_pub.py
ENPH213/Lab1/: Lab1_Warren.py
ENPH213/Lab2/: Lab2.Warren.py  Lab2_Roytblat.py
ENPH213/Lab3/: Lab3_Warren.py.txt
ENPH213/Lab4/: Lab4_Warren.py.txt  (+2 more)
ENPH253/: ErrorPropagation.py  ErrorPropagationCode.ipynb
ENPH316/: Assignment2_JuliaSet.py  Assignment6_Fourier.ipynb  test.ipynb  test.py
ENPH344/: FinalProjectCode.ipynb
ENPH345/: A5.ipynb
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 2/Truncation/: CMakeLists.txt  task-info.yaml  task.html
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 2/Truncation/src/: main.cpp  password2.cpp  password2.h
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 2/Truncation/test/: output.txt
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 6/String Functions 3/: CMakeLists.txt  task-info.yaml  task.html
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 6/String Functions 3/src/: main.cpp
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 6/String Functions 3/test/: output.txt
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 6/String Functions 4/: CMakeLists.txt  task-info.yaml  task.html
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 6/String Functions 4/src/: main.cpp  password6.cpp  password6.h
FirstYearCLionProjects-copy/APSC 143 Learning Modules (Week 2-6)/Week 6/String Functions 4/test/: output.txt
(+322 files in other folders)
